--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "Server.js",
   "scripts": {
+    "start": "node src/Server.js",
     "dev": "nodemon src/Server.js"
   },
   "keywords": [],
